style: update standard style on all pages

--- a/Frontend/Components/Pages/AddUsers.razor
+++ b/Frontend/Components/Pages/AddUsers.razor
@@ -9,18 +9,6 @@
 
 @rendermode InteractiveServer
 
-<PageTitle>Adicionar User</PageTitle>
-
-@if (!string.IsNullOrEmpty(UserSession.Username))
-{
-<div style="display: flex; justify-content: space-between; align-items: center;">
-    <p style="margin: 0;">Bem-vindo, <strong>@UserSession.Username</strong>!</p>
-    <button class="btn btn-outline-danger" @onclick="Logout">
-        <span class="oi oi-account-logout"></span> Sair
-    </button>
-</div>
-}
-
 <h1>Add User</h1>
 @if (accessDenied)
 {
@@ -35,7 +23,7 @@ else
     <div class="row justify-content-center">
         <div class="col-lg-6 col-md-8">
             <div class="card shadow-sm">
-                <div class="card-header bg-dark text-white">
+                <div class="card-header text-white">
                     <h3 class="mb-0">
                         <i class="bi bi-person-plus-fill me-2"></i>
                         Add User
@@ -159,18 +147,7 @@ else
             }
         }
     }
-
-    private async Task Logout()
-    {
-        await JsRuntime.InvokeVoidAsync("sessionStorage.clear");
-        UserSession.UserId = null;
-        UserSession.Username = string.Empty;
-        UserSession.RoleId = null;
-
-        Navigation.NavigateTo("/login?logout=true", forceLoad: true);
-    }
     
- 
     private async Task HandleValidSubmit()
     {
         successMessage = errorMessage = null;
@@ -214,3 +191,9 @@ else
         }
     }
 }
+
+<style>
+    .card-header{
+        background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
+    }
+</style>
