--- a/Frontend/Components/Pages/CreateAccount.razor
+++ b/Frontend/Components/Pages/CreateAccount.razor
@@ -7,8 +7,8 @@
 @rendermode InteractiveServer
 
 <div class="card mt-5 mx-auto" style="max-width: 500px;">
-    <div class="card-header" style="background-color:whitesmoke; color: black;">
-        <h3 class="mb-0">Create Account</h3>
+    <div class="card-header">
+        <h3 class="header-text mb-0">Create Account</h3>
     </div>
     <div class="card-body">
         <EditForm Model="@userModel" OnValidSubmit="HandleValidSubmit">
@@ -33,7 +33,7 @@
                 <ValidationMessage For="() => userModel.ConfirmPassword"/>
             </div>
 
-            <button type="submit" class="btn btn-success me-2">Save</button>
+            <button type="submit" class="btn btn-success me-2">Create</button>
             <NavLink class="btn btn-secondary" href="/">Cancel</NavLink>
         </EditForm>
 
@@ -92,5 +92,14 @@
         [Compare(nameof(Password), ErrorMessage = "Passwords do not match.")]
         public string ConfirmPassword { get; set; }
     }
-
 }
+
+<style>
+    .card-header{
+        background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
+    }
+    
+    .header-text{
+        color: white;
+    }
+</style>
