--- a/Frontend/Components/Pages/EligibleWorkProposal.razor
+++ b/Frontend/Components/Pages/EligibleWorkProposal.razor
@@ -13,17 +13,6 @@
 
 <h3>Eligible Talents by Work Proposal</h3>
 
-@if (!string.IsNullOrEmpty(UserSession.Username))
-{
-<div style="display: flex; justify-content: space-between; align-items: center;">
-    <p style="margin: 0;">Bem-vindo, <strong>@UserSession.Username</strong>!</p>
-    <button class="btn btn-outline-danger" @onclick="Logout">
-        <span class="oi oi-account-logout"></span> Sair
-    </button>
-</div>
-}
-
-
 <div class="card mb-4">
     <div class="card-body">
         <EditForm Model="searchModel" OnValidSubmit="LoadEligibleTalents" FormName="eligibleTalentsForm">
@@ -72,7 +61,7 @@
 }
 else if (talents is not null && talents.Any())
 {
-    <table class="table table-bordered">
+    <table class="table table-bordered custom-table">
         <thead>
             <tr>
                 <th>Name</th>
@@ -199,16 +188,6 @@ else if (talents != null)
         }
     }
 
-    private async Task Logout()
-    {
-        await JsRuntime.InvokeVoidAsync("sessionStorage.clear");
-        UserSession.UserId = null;
-        UserSession.Username = string.Empty;
-        UserSession.RoleId = null;
-
-        Navigation.NavigateTo("/login?logout=true", forceLoad: true);
-    }
-
     protected override async Task OnInitializedAsync()
     {
         try
@@ -321,3 +300,13 @@ else if (talents != null)
         public int EndYear { get; set; }
     }
 }
+
+<style>
+    .custom-table thead th {
+        background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
+        color: white;
+        text-align: center;
+        vertical-align: center;
+        padding: 0.75rem;
+    }
+</style>
