style: search skill bar with standard style

--- a/Frontend/Components/Layout/MainLayout.razor
+++ b/Frontend/Components/Layout/MainLayout.razor
@@ -11,7 +11,7 @@
     @if (_showTopBar)
     {
       <div class="top-row px-4">
-        <NavLink href="">Home</NavLink>
+        <NavLink href="perfil">Profile</NavLink>
         @if (_isLoggedIn)
         {
           <NavLink @onclick="Logout">Logout</NavLink>
